--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 							<!-- <div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div> -->
 							<div class="tile"><a href="https://kitsu.io/anime/black-clover-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13209/large.jpg?1611504643" alt="Black Clover"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia-5th-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43108/large.jpg?1607694967" alt="My Hero Academia 5"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42422/large.jpg?1593607834" alt="Attack on Titan The Final Season"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/dr-stone-two"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42867/large.jpg?1611329475" alt="Dr. Stone: Stone Wars"></img></a></div>							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
@@ -83,25 +82,20 @@
 					<div class="watching-item"><!--Movie Night-->
 						<h2>Movie Night</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<div class="tile"><a href="https://kitsu.io/anime/tenki-no-ko-weathering-with-you"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42028/large.jpg?1597696900" alt="Weathering With You"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-movie"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41440/large.jpg?1553411074" alt="KonoSuba: Legend of Crimson"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kimetsu-no-yaiba-movie-mugen-ressha-hen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42586/large.jpg?1603823890" alt="Demon Slayer Movie: Infinity Train"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/tenki-no-ko-weathering-with-you"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42028/large.jpg?1597696900" alt="Weathering With You"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/violet-evergarden-movie"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41450/large.jpg?1597696766" alt=" Violet Evergarden the Movie"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/made-in-abyss-fukaki-tamashii-no-reimei"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14027/large.jpg?1597690682" alt="Made in Abyss: Dawn of the Deep Soul"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/one-piece-stampede"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42061/large.jpg?1597696912" alt="One Piece Movie 14: Stampede"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/made-in-abyss-fukaki-tamashii-no-reimei"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14027/large.jpg?1597690682" alt="Made in Abyss: Dawn of the Deep Soul"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/the-girl-who-leapt-through-time"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/2027/large.jpg?1597698085" alt="The Girl Who Leapt Through Time"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/fate-stay-night-movie-heaven-s-feel"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8675/large.jpg?1597696968" alt="Fate/stay night: Heaven's Feel I"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/kiki-s-delivery-service"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/471/large.jpg?1597696643" alt="Kiki's Delivery Service"></img></a></div>						
-							<!--
 							<div class="tile"><a href="https://kitsu.io/anime/howl-s-moving-castle"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/395/large.jpg?1597698759" alt="Howl's Moving Castle"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/nakitai-watashi-wa-neko-wo-kaburu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42965/large.jpg?1597697453" alt="A Whisker Away"></img></a></div>
-							-->
 						</div><!-- tiled-list -->
 					</div><!-- Movie Night-->						
 
 					<div class="watching-item"><!--Backlog Bingeing-->
 						<h2>Backlog Bingeing</h2>
-						<div class="tiled-list scrolling-tiled-list">
-							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>							
+						<div class="tiled-list scrolling-tiled-list">											
 							<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/nichijou"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou "></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a></div> 
@@ -109,35 +103,27 @@
 							<div class="tile"><a href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/shirobako"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/sakurasou-no-pet-na-kanojo"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828" alt="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/dumbbell-nan-kilo-moteru"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42134/large.jpg?1597691884" alt="How Heavy Are the Dumbbells You Lift?"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/sewayaki-kitsune-no-senko-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42026/large.jpg?1597697553" alt="The Helpful Fox Senko-san"></img></a></div> 
-							<div class="tile"><a href="https://kitsu.io/anime/aho-girl"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13259/large.jpg?1499226484" alt="AHO-GIRL"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a></div> 																					
 						</div><!-- tiled-list -->
 					</div><!--Backlog Bingeing -->
 
 					<div class="watching-item"><!--Waiting To Binge-->
 						<h2>Waiting for Dub to Finish</h2>
-						<div class="tiled-list scrolling-tiled-list">
-							<div class="tile"><a href="https://kitsu.io/anime/re-zero-kara-hajimeru-isekai-seikatsu-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42198/large.jpg?1597696997" alt="Re:ZERO Season 2"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42324/large.jpg?1597697087" alt="The Quintessential Quintuplets 2"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/jujutsu-kaisen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42765/large.jpg?1601027481" alt="Jujutsu Kaisen"></img></a></div>						
-							<div class="tile"><a href="https://kitsu.io/anime/ore-dake-haireru-kakushi-dungeon"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43301/large.jpg?1607696005" alt="The Hidden Dungeon Only I Can Enter"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/log-horizon-3rd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42957/large.jpg?1597692116" alt="Log Horizon: Season 3"></img></a></div>
+						<div class="tiled-list scrolling-tiled-list">							
+							<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42324/large.jpg?1597697087" alt="The Quintessential Quintuplets 2"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42196/large.jpg?1597691848" alt="Reincarnated as a Slime 2"></img></a></div>							
-							<div class="tile"><a href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42323/large.jpg?1571408000" alt="Mushoku Tensei: Jobless Reincarnation"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/horimiya"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43545/large.jpg?1609224996" alt="Horimiya "></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42323/large.jpg?1571408000" alt="Mushoku Tensei: Jobless Reincarnation"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/wonder-egg-priority"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43620/large.jpg?1616155451" alt="Wonder Egg Priority"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/kumo-desu-ga-nani-ka"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41463/large.jpg?1593607925" alt="So I'm a Spider, So What?"></img></a></div>
-							<div class="tile"><a href="https://kitsu.io/anime/tatoeba-last-dungeon-mae-no-mura-no-shounen-ga-joban-no-machi-de-kurasu-youna-monogatari"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42635/large.jpg?1571504181" alt="The Hidden Dungeon Only I Can Enter"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/kumo-desu-ga-nani-ka"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41463/large.jpg?1593607925" alt="So I'm a Spider, So What?"></img></a></div>							
 							<div class="tile"><a href="https://kitsu.io/anime/fruits-basket-2019"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41995/large.jpg?1597696876" alt="Fruits Basket"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/tatoeba-last-dungeon-mae-no-mura-no-shounen-ga-joban-no-machi-de-kurasu-youna-monogatari"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42635/large.jpg?1571504181" alt="Suppose a Kid from the Last Dungeon Boonies Moved to a Starter Town"></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/jaku-chara-tomozaki-kun"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42621/large.jpg?1611329334" alt="The Low Tier Character"></img></a></div>							
 						</div><!-- tiled-list -->
 					</div><!-- Dub to Finish-->			
 
 					<div class="watching-item"><!--Most Anticipated-->
 						<h2>Most Anticipated</h2>
 						<div class="tiled-list scrolling-tiled-list">														
-							<div class="tile"><a href="https://kitsu.io/anime/ijiranaide-nagatoro-san"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43271/large.jpg?1593686865" alt="Don’t Toy With Me, Miss Nagatoro"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/fumetsu-no-anata-e"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b114535-jEzNgKyVxLNT.jpg" alt="To Your Eternity"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/isekai-maou-to-shoukan-shoujo-no-dorei-majutsu-2"><img class="thumbnail" src="https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx117448-IRah2GxIlwLH.jpg" alt="How Not to Summon a Demon Lord 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/slime-taoshite-300-nen-shiranai-uchi-ni-level-max-ni-nattemashita"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42628/large.jpg?1618062191" alt=" I've Been Killing Slimes for 300 Years "></img></a></div>
@@ -145,6 +131,7 @@
 							<div class="tile"><a href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/sword-art-online-progressive-movie-hoshi-naki-yoru-no-aria"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43546/large.jpg?1600530798" alt="Sword Art Online: Progressive Movie "></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/kobayashi-san-chi-no-maid-dragon-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42149/large.jpg?1597696965" alt=" Miss Kobayashi's Dragon Maid 2"></img></a></div> 
+							<div class="tile"><a href="https://kitsu.io/anime/the-devil-is-a-part-timer-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/44113/large.jpg?1615204263" alt=" The Devil is a Part-Timer! 2"></img></a></div>
 						</div><!-- tiled-list -->
 					</div><!-- Most Anticipated -->
 				
@@ -235,14 +222,15 @@
 						</div><!--Fantasy-->
 						<div class="tiled-list-card">
 							<h4>Romance</h4>
-							<div class="card-tiled-list">													
-								<div class="tile"><a href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img class="thumbnail" src="assets/images/thumbnails/Posters/Monthly-Girls'-Nozaki-kun_large.jpg" alt="Monthly Girls' Nozaki-kun"></img></a></div>
+							<div class="card-tiled-list">		
+								<div class="tile"><a href="https://kitsu.io/anime/horimiya"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43545/large.jpg?1609224996" alt="Horimiya "></img></a></div>											
 								<div class="tile"><a href="https://kitsu.io/anime/tonikaku-kawaii"><img class="thumbnail" src="assets/images/thumbnails/Posters/Over-the-Moon-For-You_large.jpg" alt="TONIKAWA: Over the Moon For You"></img></a></div>
-								<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="thumbnail" src="assets/images/thumbnails/Posters/My-Teen-Romantic-Comedy-SNAFU_large.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img class="thumbnail" src="assets/images/thumbnails/Posters/Monthly-Girls'-Nozaki-kun_large.jpg" alt="Monthly Girls' Nozaki-kun"></img></a></div>
 								<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome"><img class="thumbnail" src="assets/images/thumbnails/Posters/Quintessential-Quintuplets_large.jpg" alt="The Quintessential Quintuplets"></img></a></div>					
 								<!--<div class="tile"><a href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a></div>-->
 								<!--<div class="tile"><a href="https://kitsu.io/anime/toradora"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a></div>-->
 								<!--<div class="tile"><a href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10621/large.jpg?1432401413" alt="Snow White with the Red Hair"></img></a></div>-->
+								<!--<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="thumbnail" src="assets/images/thumbnails/Posters/My-Teen-Romantic-Comedy-SNAFU_large.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a></div>-->
 							</div>
 						</div><!--Romance-->
 						<div class="tiled-list-card">
