--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div><!-- about fields -->
 				
 				<div class="about-tags">
-					<div class="about-tag">Dub Club</div>
+					<div class="about-tag">English Dubs</div>
 					<div class="about-tag">Studio Bones</div>
 					<div class="about-tag">Tsunderes</div>
 					<div class="about-tag">Crimson Redheads</div>
@@ -134,6 +134,7 @@
 						<div class="tiled-list scrolling-tiled-list">		
 							<div class="tile"><a href="https://kitsu.io/anime/otome-game-no-hametsu-flag-shika-nai-akuyaku-reijou-ni-tensei-shiteshimatta-season-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43238/large.jpg?1616427533" alt="My Next Life as a Villainess: All Routes Lead to Doom! 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/honzuki-no-gekokujou-shisho-ni-naru-tame-ni-wa-shudan-wo-erandeiraremasen-3rd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43607/large.jpg?1628219145" alt=" Ascendance of a Bookworm 3rd Season "></img></a></div>
+							<div class="tile"><a href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-2nd-season-part-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43361/large.jpg?1616836274" alt="That Time I Got Reincarnated as a Slime Season 2 Part 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/tate-no-yuusha-no-nariagari-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42530/large.jpg?1599926560" alt="The Rising of the Shield Hero 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-2nd-season"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43907/large.jpg?1621419229" alt="Mushoku Tensei: Jobless Reincarnation 2"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/isekai-shokudou-2"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/44434/large.jpg?1627559522" alt="Restaurant to Another World 2"></img></a></div>
