implemented header and added profile images

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
 	<body>
 		<div id="page_wrapper">
 			<div id="page_title_wrapper">
-				<h1 id="page_title">MyAnimeProfile</h1>
+				<!--<h1 id="page_title">MyAnimeProfile</h1>-->
+				<img id="profile_banner" src="assets/images/profile_banner.webp"></img>
 			</div><!-- Page Title -->
 			
 			<div id="bio">
+				<img id="profile_pic" src="assets/images/profilepic_square.png"></img>
 				<h2 id="name">Kyle</h2>
+				<h4 id="handle">@heyKPerks</h4>
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
 			</div><!-- bio -->
 
