--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 				<h2 id="name">Kyle</h2>
 				<h4 id="handle">@heyKPerks</h4>
 				<p id="biotext">I crave visually pleasing art and enjoyable characters, but overall an immersive story. I'm a sucker for romance, get pumped for action packed fight scenes, and savor unexpected laughs; with the occasional trash.</p>
+				<div id="bio_socials">
+					<a href="https://kitsu.io/users/heyKPerks" id="bio-social-kitsu"class="bio-social-item"><img src="assets/images/icons/kitsu.ico"></img></a>
+					<a href="https://twitter.com/heyKPerks" id="bio-social-twitter"class="bio-social-item"><i class="fab fa-twitter"></i></a>
+					<a href="" id="bio-social-discord" class="bio-social-item"><i class="fab fa-discord"></i></a>										
+				</div>
 			</div><!-- bio -->
 
 			<div id="nav">
