--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<div id="page_wrapper">
 			<div id="page_title_wrapper">
-				<!--<h1 id="page_title">MyAnimeProfile</h1>-->
+				<h1 id="page_title">My Anime Profile</h1>
 				<img id="profile_banner" src="assets/images/profile_banner.webp"></img>
 			</div><!-- Page Title -->
 			
